# deno-rust-wasm-demo

./: .gitignore  Cargo.toml  README.md  demo.ts  justfile  mod.ts  test.ts
scripts/: build.ts
src/: lib.rs
