[package]
name = "deno_rust_wasm_demo"
description = "a template repository for deno modules that want to use wasm"
version = "0.1.0"
authors = ["linux_china"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
js-sys = "0.3.58"
wasm-bindgen-futures = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
boa_engine = "0.15.0"
once_cell = "1.12.0"
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.58"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Crypto",
    "CryptoKey",
    "CryptoKeyPair",
    "Event",
    "EventTarget"
]

[profile.release]
lto = true
opt-level = "z"

[features]
default = ["wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
